--- a/NagiSwipe-main.css
+++ b/NagiSwipe-main.css
@@ -48,10 +48,13 @@
 
 .ns-img {
     position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
+    top: 50%;
+    left: 50%;
+    width: auto;
+    height: auto;
+    max-width: 100%;
+    max-height: 100%;
+    transform: translate(-50%, -50%);
     object-fit: contain;
     user-select: none;
     -webkit-user-select: none;
