--- a/NagiSwipe-main.css
+++ b/NagiSwipe-main.css
@@ -39,11 +39,7 @@
 .ns-img-wrap {
     position: absolute;
     inset: 0;
-    width: 100%;
-    height: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+    display: block;
     will-change: transform;
     pointer-events: none;
     backface-visibility: hidden;
@@ -51,20 +47,19 @@
 }
 
 .ns-img {
-    display: block;
-    width: auto;
-    height: auto;
-    max-width: 100%;
-    max-height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
     object-fit: contain;
     user-select: none;
     -webkit-user-select: none;
-    pointer-events: auto; /* Allow tap detection on image */
+    pointer-events: auto;
     -webkit-user-drag: none;
     backface-visibility: hidden;
     transform: translateZ(0);
     transition: opacity 0.4s ease-out;
-    display: block;
 }
 
 .ns-ui {
