--- a/NagiSwipe-main.css
+++ b/NagiSwipe-main.css
@@ -48,17 +48,17 @@
 
 .ns-img {
     position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
+    top: 50%;
+    left: 50%;
+    max-width: 100%;
+    max-height: 100%;
+    transform: translate(-50%, -50%);
     object-fit: contain;
     user-select: none;
     -webkit-user-select: none;
     pointer-events: auto;
     -webkit-user-drag: none;
     backface-visibility: hidden;
-    transform: translateZ(0);
     transition: opacity 0.4s ease-out;
 }
 
